--- a/index.html
+++ b/index.html
@@ -12,26 +12,25 @@
     <header>
     <div class="overlay">
         <h1>Projectile Motion</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nostrum quis</p>
+        <p>Simulation represents the "Projectile Motion"</p>
     </div>
     </header>
     <div class="container row">
-        <div class="col-md-9 btn" id="myCanvas" width="200" height="100">
-            <div id="chartDiv" style="width:100%; height:300px; margin:0 auto;"></div>
+        <div class="col-md-9 chart">
+            <div id="motionChart" style="width:100%; height:300px; margin:0 auto;"></div>
         </div>
-        <div class="col text-center">
-            <button class="launch-btn">Launch</button>
-            <button class="reset-btn">Reset</button>
+        <div class="col text-center controller">
+            <button id="startBtn" class="launch-btn">Launch</button>
+            <button id="restartBtn" class="reset-btn">Reset</button>
             <label for="velocity">Initial Velocity (m/s):</label><br>
             <input type="range" id="velocity" name="velocity" min="0" max="100" oninput="this.nextElementSibling.value = this.value">
-            <output>50</output>
-            <label for="angle">Initial Angle (°):</label><br>
+            <output id="velocityNumber">50</output>
+            <br><label for="angle">Initial Angle (°):</label><br>
             <input type="range" id="angle" name="angle" min="0" max="90" oninput="this.nextElementSibling.value = this.value">
-            <output>45</output>
+            <output id="angleNumber">45</output>
         </div>
     </div>
-    <button id="startBtn">fr</button>
   </body>
-  <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script src="index.js"></script>
 </html>
